--- a/style.css
+++ b/style.css
@@ -5,20 +5,39 @@
     --color-four: #C1DBB3;
 }
 
-body,
-html {
-    height: 100%;
-    margin: 0;
-    background-color: var(--color-three);
-    font-family: "Scope One", serif;
-    font-optical-sizing: auto;
-    scroll-behavior: smooth;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body,
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    background-color: white;
+    font-family: "Scope One", serif;
+    color: #393e46;
+    font-optical-sizing: auto;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+
+.navbar {
+    background-color: var(--color-one);
+
+}
+
+.navbar a,
+.nav-item,
+.nav-link {
+    color: var(--color-three);
+}
+
+.navbar .dropdown-menu .dropdown-item {
+    color: var(--color-one);
 }
 
 .maingrid {
@@ -35,12 +54,13 @@ html {
 .left-side {
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     /* vertical centering */
     justify-content: center;
     /* horizontal centering */
     background-color: var(--color-three);
-    /* same color you use */
+    text-align: center;
 }
 
 h1 {
@@ -50,6 +70,11 @@ h1 {
     color: var(--color-one);
     display: block;
     font-size: 125px;
+}
+
+h2 {
+    font-style: italic;
+    color: var(--color-one);
 }
 
 .right-side {
@@ -67,4 +92,181 @@ img {
     width: 100%;
     object-fit: cover;
     /* ensures image doesn't stretch weirdly */
+    filter: brightness(93%) saturate(95%);
+
+}
+
+.carousel-caption p {
+    font-size: 20px;
+}
+
+.section {
+    width: 100vw;
+    /* Full width */
+    min-height: 100vh;
+    /* Full screen height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+
+.titulos {
+
+    text-align: center;
+    margin-top: 10%;
+    color: var(--color-two);
+    padding: 25px;
+
+}
+
+
+
+.productsGrid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 25px;
+    padding: 45px;
+}
+
+.card {
+    background-color: transparent;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 3px;
+}
+
+.card-img-top {
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+}
+
+
+.card-title {
+    color: var(--color-one);
+
+}
+
+
+.description {
+    padding: 35px;
+    font-size: 22px;
+    text-align: center;
+    border-bottom: 1px solid var(--color-four);
+    border-top: 1px solid var(--color-four);
+}
+
+#rv,
+#tst {
+
+    font-weight: bold;
+    font-style: italic;
+    border: 1px solid var(--color-three);
+
+    background-color: var(--color-three)
+}
+
+.servicesGrid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 50px;
+    width: 100%;
+    height: 100vh;
+    padding: 15px;
+    margin: 20px;
+    color: var(--color-one);
+
+
+}
+
+.service h4 {
+
+    border-bottom: 1px solid var(--color-three);
+    padding: 10px;
+}
+
+.service-1 {
+    transform: translateY(0px);
+
+
+}
+
+.service-2 {
+    transform: translateY(40px);
+}
+
+.service-3 {
+    transform: translateY(80px);
+}
+
+.service-4 {
+    transform: translateY(120px);
+}
+
+.service-5 {
+    transform: translateY(160px);
+}
+
+.nosotros {
+    height: 400px;
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    background: linear-gradient(-45deg,
+            var(--color-one) 50%,
+            /* left side */
+            var(--color-two) 50%
+            /* right side */
+        );
+
+}
+
+.left-diagonal {
+    width: 45%;
+    margin-top: 0;
+    /* stays at top */
+
+}
+
+
+
+.right-diagonal {
+    width: 45%;
+
+    transform: translateY(160px);
+}
+
+
+
+.contact-info {
+    text-align: end;
+    margin-left: 50%;
+}
+
+.contact-info h4 {
+    margin-bottom: 15px;
+}
+
+.contact-info p {
+    font-size: 1rem;
+    font-style: italic;
+    color: var(--color-one);
+}
+
+.contact-info a {
+    color: var(--color-one);
+    text-decoration: none;
+    font-size: 20px;
+}
+
+footer {
+    background-color: var(--color-four);
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 80px;
+    padding: 50px 20px;
+
 }
